salesforce/force-app/main/default/objects/Formula_Ingredient__c/Formula_Ingredient__c.object-meta.xml
<CustomObject>
    <description>Individual raw material ingredients in a formula with cost calculations</description>
    <label>Formula Ingredient</label>
    <nameField>
        <displayFormat>FI-{000000}</displayFormat>
        <label>Ingredient Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formula Ingredients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>