salesforce/force-app/main/default/objects/Formula_Ingredient__c/fields/Actual_Mg__c.field-meta.xml
<CustomField>
    <fullName>Actual_Mg__c</fullName>
    <label>Actual mg</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>