salesforce/force-app/main/default/objects/Formula_Ingredient__c/fields/Formula_Version__c.field-meta.xml
<CustomField>
    <fullName>Formula_Version__c</fullName>
    <label>Formula Version</label>
    <referenceTo>Formula_Version__c</referenceTo>
    <relationshipLabel>Formula Ingredients</relationshipLabel>
    <relationshipName>Formula_Ingredients_Version</relationshipName>
    <type>Lookup</type>
</CustomField>