salesforce/force-app/main/default/objects/Formula_Ingredient__c/fields/Freight__c.field-meta.xml
<CustomField>
    <fullName>Freight__c</fullName>
    <label>Freight</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>