salesforce/force-app/main/default/objects/Formula_Ingredient__c/fields/Ingredient_Index__c.field-meta.xml
<CustomField>
    <fullName>Ingredient_Index__c</fullName>
    <label>Ingredient Index</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>