salesforce/force-app/main/default/objects/Formula_Ingredient__c/fields/Manual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Manual_Cost__c</fullName>
    <label>Manual Cost</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>