salesforce/force-app/main/default/objects/Formula_Ingredient__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <referenceTo>Material__c</referenceTo>
    <relationshipLabel>Formula Ingredients</relationshipLabel>
    <relationshipName>Formula_Ingredients</relationshipName>
    <type>Lookup</type>
</CustomField>