salesforce/force-app/main/default/objects/Formula_Ingredient__c/fields/Mg__c.field-meta.xml
<CustomField>
    <fullName>Mg__c</fullName>
    <label>mg (with Overage)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>