salesforce/force-app/main/default/objects/Formula_Ingredient__c/fields/Overage__c.field-meta.xml
<CustomField>
    <fullName>Overage__c</fullName>
    <label>Overage (%)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>