salesforce/force-app/main/default/objects/Formula_Ingredient__c/fields/Potency__c.field-meta.xml
<CustomField>
    <fullName>Potency__c</fullName>
    <label>Potency (%)</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>